update: numpy learning

--- a/time-series.ipynb
+++ b/time-series.ipynb
@@ -12,22 +12,758 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 01. Preparation"
+    "### 01. Installing app"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " 1. Install Python 3"
+    " 1. Install Python 3\n",
+    " 2. Install Anaconda\n",
+    " 3. Install jupyter notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02. Installing Enviroment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, in this course, we must use pythone enviroment (lot ot libaries) provided from the mentor, it's name 'tsa_course_env.yml', or you can download it from this repo.\n",
+    "\n",
+    "* conda env -f tsa_course_env.yml --> for creating the envi\n",
+    "* conda activate tsa_course --> for activating the envi\n",
+    "* conda deactivate --> for deactivating the envi\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03. Git Repoitory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It this course, I integrated my learning (in this jupyter) to git. Heres the link: https://github.com/jakaesembodo/Python-Time-Series\n",
+    "\n",
+    "* git init -> make current directory as git reporsitory\n",
+    "* git clone [URL] -> clone gir directory from URL\n",
+    "* git remote [ALIAS] [URL] -> add remote git url\n",
+    "* git add [FILE NAME] -> add file for pushing\n",
+    "* git commit -m [COMMENT] -> add commit\n",
+    "* git push [ALIAS] -> exec for pushing to repo\n",
+    "* git pull -> pull the newest update from repo\n",
+    "* git log -> show commit history\n",
+    "* git reset --hard -> for reset all commit "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 04. NumPy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Numpy = pyhton libary for array and matrix\n",
+    "* we learn about how to make: array, matrix, shape, random number, indexing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "mylist = [1,2,3] #create list with []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(mylist) #check the type of variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array(mylist) #create array variable from existing list\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type (arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist2 = [[1,2,3],[4,5,6],[7,8,9]] #create list for matrix\n",
+    "mymatrix = np.array(mylist2) #create matrix 2 dimensional\n",
+    "mymatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#operate matrix with 'matrix_name'. (use dot) + TAB \n",
+    "mymatrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mymatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  6, 10, 14, 18])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(2,20,4) #create list with arange value, start from 2 to 20, add by 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros(10) #create list with zero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros((10,2))#create list zero as matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1.],\n",
+       "       [1., 1.],\n",
+       "       [1., 1.],\n",
+       "       [1., 1.],\n",
+       "       [1., 1.]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create a custom matrix value\n",
+    "np.ones((5,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6., 6.],\n",
+       "       [6., 6.],\n",
+       "       [6., 6.],\n",
+       "       [6., 6.],\n",
+       "       [6., 6.]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((5,2))+5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.83333333,  1.66666667,  2.5       ,  3.33333333,\n",
+       "        4.16666667,  5.        ,  5.83333333,  6.66666667,  7.5       ,\n",
+       "        8.33333333,  9.16666667, 10.        ])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#a bunch of value between value\n",
+    "np.linspace(0,10,13) #show value between 0 - 10, only 13 value (space number)value\n",
+    "##len(np.linspace(0,10,13)) #number of value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3.39660639,  1.09906735, -0.13570041, -0.31934674, -0.76143343],\n",
+       "       [ 0.17128903, -0.55041116, -0.34518275,  0.40767182,  0.58693868],\n",
+       "       [ 0.16667154, -0.41243138,  1.78187755, -1.48423781,  0.39353245],\n",
+       "       [ 0.87496942,  0.44317351, -0.03523784,  0.36841111,  0.02765731],\n",
+       "       [-0.32730495, -0.57189526, -0.59044979,  1.2204019 , -0.71814679]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#make random value \n",
+    "np.random.randn(5) #for array\n",
+    "np.random.randn(5,5) #for matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([22,  2])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#make random with spesific limit\n",
+    "np.random.randint(1,100,2) #there are 2 value, from 1 to 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.22199317, 0.87073231, 0.20671916, 0.91861091, 0.48841119,\n",
+       "       0.61174386, 0.76590786, 0.51841799, 0.2968005 , 0.18772123])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(5) #for shuffeling (id random)\n",
+    "array = np.random.rand(10)\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.22199317, 0.87073231, 0.20671916, 0.91861091, 0.48841119,\n",
+       "       0.61174386, 0.76590786, 0.51841799, 0.2968005 , 0.18772123])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.22199317, 0.87073231],\n",
+       "       [0.20671916, 0.91861091],\n",
+       "       [0.48841119, 0.61174386],\n",
+       "       [0.76590786, 0.51841799],\n",
+       "       [0.2968005 , 0.18772123]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#reshape array to matrix\n",
+    "reshape_array = array.reshape(5,2)\n",
+    "reshape_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get max min, and its location\n",
+    "reshape_array.max()\n",
+    "reshape_array.min()\n",
+    "reshape_array.argmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#indexing\n",
+    "array = np.arange(1,11)\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#slicing array and monipulating\n",
+    "array_0_5 = array[:5]\n",
+    "array_0_5[:] = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100, 100, 100, 100, 100])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_0_5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100, 100, 100, 100, 100,   6,   7,   8,   9,  10])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "arr_2d = np.array(arr_2d)\n",
+    "arr_2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 3],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#selecting index from matrix (kolom:baris)\n",
+    "arr_2d[:2,1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-99-c6a7f38dcecd>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-99-c6a7f38dcecd>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    array(>7)\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "array(>7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True,  True,  True,  True, False, False,  True,  True,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array > 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100, 100, 100, 100, 100,   8,   9,  10])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#select matrix with spesiic value\n",
+    "array[array>7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#operation\n",
+    "arr_2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12, 15, 18])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sum accross the rows (become colom)\n",
+    "arr_2d.sum(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6, 15, 24])"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sum accross the coloms (become rows)\n",
+    "arr_2d.sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.mean()"
+   ]
   },
   {
    "cell_type": "code",
